Hard coded height to fix bug on iOS 9 MobileSafari

--- a/assets/src/screen.scss
+++ b/assets/src/screen.scss
@@ -108,7 +108,7 @@ header#app-topbar {
 
       svg {
         display: block;
-        height: 100%;
+        height: 40px;
 
         #icon-laurel {
           fill: var(--text);
